--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,9 @@
 # ASP.NET
 - task: DotNetCoreCLI@2
   inputs:
+    command: 'build'
+- task: DotNetCoreCLI@2
+  inputs:
     command: 'test'
 # Build and test ASP.NET projects.
 # Add steps that publish symbols, save build artifacts, deploy, and more:
